# x-runikraft

./: .gitattributes  .gitignore  .gitmodules  1.sh  Cargo.toml  Kconfig  LICENSE  Makefile  README.md  default_config.rs  grep  linker.ld  makefile
.VSCodeCounter/2022-06-29_17-10-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
core/: Cargo.toml
core/list/: Cargo.toml
core/list/src/: lib.rs
core/src/: align_as.rs  bitcount.rs  config.rs  errno.rs  lib.rs  list.rs  panic.rs
core/src/compat_list/: list.rs  mod.rs  slist.rs  stailq.rs  tailq.rs
core/src/list/: list.rs  mod.rs  slist.rs  stailq.rs  tailq.rs
core/src/plat/: mod.rs
core/src/plat/riscv64/: console.rs  irq.rs  lcpu.rs  mod.rs  time.rs
core/src/platform/: mod.rs
core/src/platform/riscv64/: bootstrap.rs  console.rs  entry.asm  mod.rs  reg.rs  sbi.rs  time.rs
dev-test/: .gitignore  Cargo.toml  README
dev-test/src/: global_alloc.rs  list.rs  main copy.rs  main.rs  rkalloc_buddy.rs  sched_coop0.rs  sched_coop1.rs  slist.rs  stailq.rs  tailq.rs  thread_context.rs  trap.rs  uart.rs
doc/assets/: Runikraft_logo.txt
docs/: .gitignore
docs/00_discussions/: README.md
docs/01_timeline/: README.md
docs/10_pre-research/: README.md  Unikernel初步构想-张子辰.md  人机接口预调研-吴骏东.md  安全容器调研- 蓝俊玮.md  智能电梯系统构想-张子辰.md  树莓派上实现操作系统调研-郭耸霄.md  物联网操作系统项目构想-陈建绿.md
docs/11_research/: README.md  RustyHermit等调研.md  Unikernel的安全性问题.md  bib.bib  research-report.aux  research-report.out  research-report.tex  research-report.toc  unikernel往年概述.md
example/sudoku/: Cargo.toml
example/sudoku/src/: cursor.rs  input.rs  key.rs  main.rs  output.rs
lib/: .gitignore
lib/rkalloc/: Cargo.toml  alloc_error_handler.rs
lib/rkalloc_buddy/: Cargo.toml
lib/rkalloc_buddy/src/: debug.rs  lib.rs
lib/rkalloc_buddy/support/: find_data_size.cpp
lib/rkalloc_buddy/tests/: alloc_buddy.rs
lib/rkalloc_empty/: Cargo.toml
lib/rkalloc_mi/: Cargo.toml
lib/rkallocbuddy/: Cargo.toml
lib/rkallocbuddy/src/: debug.rs  lib.rs
lib/rkallocbuddy/support/: find_data_size.cpp
lib/rkallocmi/: Cargo.toml
lib/rkargparse/: Cargo.toml
lib/rkblkdev/: Cargo.toml
lib/rkblkdev/src/: blkdev.rs  blkdev_core.rs  blkdev_driver.rs  blkfront.rs  blkreq.rs  lib.rs
lib/rkboot/: Cargo.toml  config
lib/rkboot/src/: lib.rs
lib/rkcompat_list/: Cargo.toml
lib/rkgpu/: Cargo.toml
lib/rkgpu/src/: color.rs  cursor.rs  cursor.txt  dic.txt  lib.rs  output.rs
lib/rkgpudev/: Cargo.toml
lib/rkgpudev/src/: color.rs  font.txt  lib.rs  output.rs
lib/rkinput/: Cargo.toml
lib/rkinput/src/: key.rs  lib.rs
lib/rklist/: Cargo.toml
lib/rklist/src/: lib.rs  list.rs  slist.rs  stailq.rs  tailq.rs
lib/rklist/tests/: list.rs
lib/rklock/: Cargo.toml
lib/rkmbox/: Cargo.toml
lib/rkmpi/: Cargo.toml
lib/rkmpi/src/: lib.rs
lib/rknetdev/: Cargo.toml
lib/rknetdev/src/: lib.rs  netbuf.rs  netdev_core.rs  netdev_driver.rs
lib/rkparam/: Cargo.toml
lib/rkplat/: Cargo.toml  config
lib/rkplat/src/: lib.rs
lib/rkplat/src/drivers/: device_tree.rs  mod.rs
lib/rkplat/src/drivers/rtc/: goldfish.rs  mod.rs
lib/rkplat/src/drivers/uart/: mod.rs  ns16550.rs
lib/rkplat/src/drivers/virtio/: blk.rs  console.rs  entropy.rs  gpu.rs  hal.rs  header.rs  input.rs  mod.rs  net.rs  queue.rs
lib/rkplat/src/riscv64/: 128None.txt  64None.txt  bootstrap.rs  console.rs  constants.rs  device.rs  entry.asm  exception.rs  hart_entry.asm  int_entry.asm  intctrl.rs  irq.rs  lcpu.rs  mcause.rs  mod.rs  mstatus.rs  new_stack.asm  reg.rs  sbi.rs  spinlock.rs  thread.asm  thread.rs  time.rs
lib/rkplat/src/riscv64/asm-m/: entry.asm  hart_entry.asm  int_entry.asm
lib/rkring/: Cargo.toml
lib/rksched/: Cargo.toml
lib/rkschedbasis/: Cargo.toml
lib/rkschedcoop/: Cargo.toml
lib/rkschedpreem/: Cargo.toml
lib/rksignal/: Cargo.toml
lib/rksignal/src/: lib.rs  signal.rs  sigset.rs
lib/rkswrand/: Cargo.toml
lib/rkswrand/src/: lib.rs
lib/rktimeconv/: Cargo.toml
makefiles/: docs.mk  report.mk  test.mk.0  test.mk.1  test.mk.sh
reference/stackframe/: stackframe.cpp  stackframe.rs
report/: .gitignore  COPYING.images.md  LICENSE  runikraft-report.cls
report/00_discussions/: README.md
report/00_timeline/: README.md
report/01_timeline/: README.md
report/0_timeline/: README.md
report/10_pre-research/: README.md
report/11_research/: README.md  research-report.tex
report/20_feasibility/: README.md  Unikraft源代码分析.md  feasibility-report.bib  feasibility-report.tex  therotical_basis.md  技术依据-RISCV特权指令与KVM.md  技术依据-Rust编写操作系统的可行性分析.md
report/2_research/: ClickOS等调研.md  README.md  Rust语言的优越性.md  research-report.tex
report/30_midterm/: README.md
report/3_feasibility/: feasibility-report.tex  技术依据-RISCV特权指令与KVM.md
report/4_midterm/: README.md
report/5_conclusion/: README.md
report/5_final/: README.md  final-report.tex
sudoku/: Cargo.toml
sudoku/src/: main.rs
support/: README.md  handle_config.cpp  make_example.sh  transform_cursor.py  transform_logo.py
support/scripts/: build.Makefile
test/: README
test/alloc_buddy0/: Cargo.toml
test/alloc_buddy0/.cargo/: config.toml
test/alloc_buddy0/src/: main.rs
test/alloc_buddy1/: Cargo.toml
test/global_alloc0/: Cargo.toml
test/global_alloc0/src/: main.rs
test/gpu0/: Cargo.toml
test/gpu0/src/: main.rs
test/gpu1/: Cargo.toml
test/list0/: Cargo.toml
test/lock0/: Cargo.toml  run_flags.txt
test/lock0/src/: main.rs
test/plat_thread_context0/: Cargo.toml
test/plat_time0/: Cargo.toml
test/rand0/: Cargo.toml  run_flags.txt
test/rand0/src/: main.rs
test/rand1/: Cargo.toml
test/rand1/src/: main.rs
test/rkgpu0/: Cargo.toml  run_flags.txt
test/rkgpu0/src/: main.rs
test/rkgpu1/: Cargo.toml
test/rkgpu1/src/: main.rs
test/rkplat_time0/: Cargo.toml
test/rkplat_time0/src/: main.rs
test/sched_coop0/: Cargo.toml
test/sched_coop0/src/: main.rs
test/sched_preem0/: Cargo.toml  run_flags.txt
test/sched_preem0/src/: main.rs
test/stailq0/: Cargo.toml
test/stailq0/src/: main.rs
(+37 files in other folders)
