# SPDX-License-Identifier: BSD-3-Clause
# Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[workspace]

members = [
    "core",
    "lib/rkplat",
    "lib/rkboot",
    "lib/rkalloc",
    "lib/rkallocbuddy",
    "lib/rkargparse",
    "lib/rkring",
    "lib/rkmpi",
    "lib/rklock",
    "lib/rksched",
    "lib/rkschedcoop",
    "lib/rkschedpreem",
    "lib/rksignal",
    "lib/rkgpu",
    "lib/rkinput",
    "lib/rkswrand",
    "lib/rktimeconv",
    "example/sudoku"
]
