# SPDX-License-Identifier: BSD-3-Clause
# core/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
    name = "runikraft"
    version = "0.1.0"
    authors = [
        "吴骏东 <1904346407@qq.com>",
        "张子辰 <zichen350@gmail.com>",
        "蓝俊玮 <ljw13@mail.ustc.edu.cn>",
        "郭耸霄 <logname@mail.ustc.edu.cn>",
        "陈建绿 <2512674094@qq.com>",
    ]
    license = "BSD-3-Clause"
    edition = "2021"
