[package]
    name = "dev-test"
    version = "0.1.0"
    edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    runikraft = {path = "../core"}
    rkalloc = {path = "../lib/rkalloc"}
    rkalloc_buddy = {path = "../lib/rkalloc_buddy"}
    rkblkdev={path="../lib/rkblkdev"}
