[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rkgpu = {path = "../../lib/rkgpu"}
rkplat = {path = "../../lib/rkplat"}
rkalloc = {path = "../../lib/rkalloc"}
rkboot = {path = "../../lib/rkboot"}
