# SPDX-License-Identifier: BSD-3-Clause
# rkalloc_buddy/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rkalloc_buddy"
version = "0.1.0"
authors = [ "张子辰 <zichen350@gmail.com>" ]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
    runikraft = {path = "../../core"}
    rkalloc = {path = "../rkalloc"}
    rkplat = {path = "../rkplat"}

[[test]]
name = "alloc_buddy"
# harness = false # 默认值为true，如果设置为false，`cargo test`会忽略传递给rustc的--test参数，达到的效果就是无法单独运行一个测试，比如使用`cargo test --test alloc_buddy`可以单独运行alloc_buddy这一个集成测试