[package]
name = "rkblkdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkalloc = { path = "../rkalloc" }
rksched = { path = "../rksched" }
runikraft = {path = "../../core"}
rkplat = {path = "../rkplat"}
rkschedbasis={path="../rkschedbasis"}

[features]
dispatcherthreads = []
sync_io_blocked_waiting = []
xen_blkfront_grefpool=[]