# SPDX-License-Identifier: BSD-3-Clause
# rkblkdev/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rkblkdev"
version = "0.1.0"
authors = [ "郭耸霄 <logname@mail.ustc.edu.cn> "]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
runikraft = {path = "../../core"}
rkalloc = { path = "../rkalloc"}
rksched = { path = "../rksched"}
rkplat = {path = "../rkplat"}

[features]
dispatcherthreads = []
sync_io_blocked_waiting = []
xen_blkfront_grefpool=[]
