# SPDX-License-Identifier: BSD-3-Clause
# rkboot/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rkboot"
version = "0.1.0"
authors = [ "张子辰 <zichen350@gmail.com>" ]
license = "BSD-3-Clause"
edition = "2021"

[features]
    default = ["alloc_buddy"]
    alloc_buddy = ["rkalloc_buddy"]

[dependencies]
    runikraft = {path = "../../core"}
    rkalloc = {path = "../rkalloc"}
    rkalloc_buddy = {path = "../rkalloc_buddy", optional = true}
    rkplat = {path = "../rkplat"}
