# SPDX-License-Identifier: BSD-3-Clause
# rkboot/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rkboot"
version = "0.1.0"
authors = [ "张子辰 <zichen350@gmail.com>" ]
license = "BSD-3-Clause"
edition = "2021"

[features]
    default = ["alloc_buddy","sched_coop"]
    alloc_buddy = ["rkalloc_buddy"]
    have_scheduler = ["rksched"]
    sched_coop = ["have_scheduler","rkschedcoop"]
    sched_preem = ["have_scheduler","rkschedpreem"]

[dependencies]
    runikraft = {path = "../../core", default-features = false}
    rkalloc = {path = "../rkalloc", default-features = false}
    rkalloc_buddy = {path = "../rkalloc_buddy", default-features = false, optional = true}
    rkplat = {path = "../rkplat", default-features = false}
    rksched = {path = "../rksched", default-features = false, optional = true}
    rkschedcoop = {path = "../rkschedcoop", default-features = false, optional = true}
    rkschedpreem = {path = "../rkschedpreem", default-features = false, optional = true}
