# SPDX-License-Identifier: BSD-3-Clause
# rkboot/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rkboot"
version = "0.1.0"
authors = [ "张子辰 <zichen350@gmail.com>" ]
license = "BSD-3-Clause"
edition = "2021"

[features]
    alloc_buddy = ["rkallocbuddy"]
    have_scheduler = ["rksched"]
    sched_coop = ["have_scheduler","rkschedcoop"]
    sched_preem = ["have_scheduler","rkschedpreem"]

[dependencies]
    runikraft = {path = "../../core"}
    rkalloc = {path = "../rkalloc"}
    rkallocbuddy = {path = "../rkallocbuddy", optional = true}
    rkplat = {path = "../rkplat"}
    rksched = {path = "../rksched", optional = true}
    rkschedcoop = {path = "../rkschedcoop", optional = true}
    rkschedpreem = {path = "../rkschedpreem", optional = true}
