[package]
name = "rkinput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkplat = { path = "../rkplat", features = ["driver_virtio_gpu","driver_virtio_input"] }
rksched = { path = "../rksched" }
rkgpu = {path="../rkgpu"}
