# SPDX-License-Identifier: BSD-3-Clause
# rklist/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
name = "rklist"
version = "0.1.0"
authors = [ "张子辰 <zichen350@gmail.com>" ]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
    runikraft = {path = "../../core"}
    rkalloc = {path = "../rkalloc"}
