# SPDX-License-Identifier: BSD-3-Clause
# rknetdev/Cargo.toml
# Copyright (C) 2022 吴骏东, 张子辰, 蓝俊玮, 郭耸霄 and 陈建绿.

[package]
    name = "rknetdev"
    version = "0.1.0"
    authors = [ "张子辰 <zichen350@gmail.com>" ]
    license = "BSD-3-Clause"
    edition = "2021"

[features]
    default = []
    dispatcherthreads = ["rksched"]

[dependencies]
    runikraft = {path = "../../core", default-features = false}
    rkalloc = {path = "../rkalloc", default-features = false}
    rksched = {path = "../rksched", default-features = false, optional=true}
