[package]
    name = "test-alloc_buddy0"
    version = "0.1.0"
    edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rkplat = {path = "../../lib/rkplat"}
    rkalloc = {path = "../../lib/rkalloc"}
    rkallocbuddy = {path = "../../lib/rkallocbuddy"}
    runikraft = {path = "../../core"}
