[package]
    name = "test-global_alloc0"
    version = "0.1.0"
    edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rkplat = {path = "../../lib/rkplat", features = ["driver_ns16550"]}
    rkboot = {path = "../../lib/rkboot", features = ["alloc_buddy"]}
    rkalloc = {path = "../../lib/rkalloc"}
