[package]
    name = "test-sched_coop0"
    version = "0.1.0"
    edition = "2021"

[workspace]

[dependencies]
    rkplat = {path = "../../lib/rkplat"}
    rkalloc = {path = "../../lib/rkalloc"}
    rkboot = {path = "../../lib/rkboot"}
    rksched = {path = "../../lib/rksched"}
    rkinput = {path = "../../lib/rkinput"}
