[package]
    name = "test-stailq0"
    version = "0.1.0"
    edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rkboot = {path = "../../lib/rkboot"}
    rkplat = {path = "../../lib/rkplat"}
    rkalloc = {path = "../../lib/rkalloc"}
    runikraft = {path = "../../core"}
